overflow fixed

--- a/eventeffects.css
+++ b/eventeffects.css
@@ -173,12 +173,14 @@
 
 /* boring stuff */
 
-/*html,body
+html,body
 {
   height: 100vh;
   width: 100vw;
-}*/
+  overflow-x: hidden !important;
+}
 body {
+
   font-family: 'Helvetica', sans-serif;
   background-color: #e7e7e7;
   color: #777;
